test/libsolidity/syntaxTests/freeFunctions/free_constructor.sol
constructor() {}
// ----
// ParserError 7858: (0-11='constructor'): Expected pragma, import directive or contract/interface/library/struct/enum/constant/function definition.
